# kahboon0425.github.io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  leptosfmt.toml  package-lock.json  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: gh-pages-deploy.yml
assets/: assets_index.json  assets_index.ron
assets/images/Personal-Projects/Game-Art/: description.txt
assets/images/Work-Projects/Chinese-New-Year/A -Journey-Home-for-Reunion-千里奔赴只为团圆/: decription.txt
assets/images/Work-Projects/Chinese-New-Year/Hongkong-Kopitiam/: decription.txt
assets/images/Work-Projects/Chinese-New-Year/Lantern Reunion-灯火团圆/: decription.txt
assets/images/Work-Projects/Chinese-New-Year/Theme-Golden-Mandarin-Orchard-金橘园/: decription.txt
assets/images/Work-Projects/Chinese-New-Year/Theme-Springtime in Nyonya House/: decription.txt
assets/images/Work-Projects/Christmas/Theme-Golden-Christmas-Funfair/: decription.txt
assets/images/Work-Projects/Christmas/Theme-Monster-In-The-Box/: decription.txt
assets/images/Work-Projects/Christmas/Theme-Santa's-Dessert-Party/: decription.txt
assets/images/Work-Projects/Hari-Raya/Kaleido-Raya-Moments/: decription.txt
assets/images/Work-Projects/Hari-Raya/Theme-Seindah-Corak-Aidilfitri/: decription.txt
assets/images/Work-Projects/Mid-Autumn/Theme-Blossoms-of-Prosperity-花开富贵/: decription.txt
assets/images/Work-Projects/Small-Event/Goodies-for-Foodies/: decription.txt
src/: about.rs  components.rs  home.rs  main.rs  personal.rs  portfolio.rs  projects.rs  work.rs
web/: index.html  output.css  style.css
